--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,11 @@
     font-weight: 400;
     font-style: normal;
   }
-  
+  /* body{
+    margin: 0px;
+    padding: 0px;
+  box-sizing: border-box;
+  } */
 
 /* shared styles */
  .semibold-font{
@@ -139,7 +143,9 @@
        display: block;
     }
   
-   
+   .navbar-line{
+    display: none;
+   }
 
 
 
@@ -164,9 +170,15 @@
      .navbar{
       justify-content: flex-start;
       padding: 10px 20px;
-      border-bottom: 2px solid  lightgreen;
      }
-
+      
+      .navbar-line{
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: lightgreen;
+        margin: 0;
+      }
      .logo{
    position: absolute;
    top: 10px;
@@ -182,8 +194,9 @@
     position: absolute;
     top: 10px;
     right: 10px;
-   
    }
+
+   
     .banner-container{
         flex-direction: column-reverse;
         text-align: center;
